crates/panache-parser/tests/snapshots/yaml__yaml_suite_M2N8__00.snap
---
source: crates/panache-parser/tests/yaml.rs
expression: snapshot
---
case_id: M2N8/00
input: "- ? : x\n"
has_error_contract: false
parsed_mapping_tree: true
diagnostics: []
