crates/panache-parser/tests/snapshots/yaml__yaml_suite_M2N8__01.snap
---
source: crates/panache-parser/tests/yaml.rs
expression: snapshot
---
case_id: M2N8/01
input: "? []: x\n"
has_error_contract: false
parsed_mapping_tree: true
diagnostics: []
